--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,17 @@
             <version>13</version>
         </dependency>
         <dependency>
-        	<groupId>org</groupId>
-        	<artifactId>junit</artifactId>
-        	<scope>test</scope>
-        </dependency>
+ 			    <groupId>org.junit.jupiter</groupId>
+			    <artifactId>junit-jupiter-engine</artifactId>
+ 			    <version>5.7.1</version>
+			    <scope>test</scope>
+ 	      </dependency>
+ 		    <dependency>
+ 			    <groupId>org.junit.platform</groupId>
+		     	<artifactId>junit-platform-runner</artifactId>
+ 		    	<version>1.2.0</version>
+ 		    	<scope>test</scope>
+	    	</dependency>
     </dependencies>
     <build>
         <plugins>
